fix homepage url

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hws2",
-  "homepage": "https://StarkovSergey.github.io/hws-autotest",
+  "homepage": "https://starkovsergey.github.io/hw-autotest",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
